--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,9 @@
     <title>Three.js Interactive Card</title>
   </head>
   <body>
+    <div class="container">
+
+    </div>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
